# diarc

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  gradle.properties  package-lock.json  package.json  readme.md  settings.gradle.kts
vision/src/main/cpp/: CMakeLists.txt
vision/src/main/cpp/capture/: CMakeLists.txt  Capture.cpp  Capture.hpp  CaptureEnums.hpp  CaptureFile.cpp  CaptureFirewire.cpp  CaptureGStreamer.cpp  CaptureGStreamer.hpp  CaptureMultisense.cpp  CaptureMultisense.hpp  CaptureNao.cpp  CaptureNao.hpp  CaptureOpenni.cpp  CaptureOpenni2.cpp  CaptureOpenniPlus.cpp  CapturePCDFile.cpp  CaptureROS.cpp  CaptureROS.hpp  CaptureRealSense.cpp  CaptureRealSense.hpp  CaptureSimulateKinect.cpp  CaptureV4L2.cpp
vision/src/main/cpp/capture/calibration/: CMakeLists.txt  Cameras.cpp  Cameras.hpp  DepthSensorCalibration.cpp  DepthSensorCalibration.hpp  StereoCalibration.cpp  StereoCalibration.hpp
vision/src/main/cpp/capture/firewire/: FireWireHelper.cpp  FireWireHelper.hpp  FireWireHelpers.cpp  FireWireHelpers.hpp
vision/src/main/cpp/capture/openni/: OpenniDevice.cpp  OpenniDevice.hpp
vision/src/main/cpp/capture/realsense/: cv-helpers.hpp
vision/src/main/cpp/capture/swig/: CMakeLists.txt  Capture.i  CaptureJNI.cpp  CaptureJNI.hpp
vision/src/main/cpp/capture/util/: CaptureUtilities.cpp  CaptureUtilities.hpp
vision/src/main/cpp/capture/v4l2/: V4L2Helper.cpp  V4L2Helper.hpp
vision/src/main/cpp/cmake/Modules/: FindAGILEGRASP.cmake  FindGLIB.cmake  FindGStreamer.cmake  FindJSONCPP.cmake  FindREALSENSE.cmake  FindROS.cmake  FindSIFTGPU.cmake  FindZBAR.cmake
vision/src/main/cpp/common/: CMakeLists.txt  CaptureData.hpp  VisionConstants.cpp  VisionConstants.hpp
vision/src/main/cpp/common/fol/: CMakeLists.txt  Predicate.hpp  PredicateBuilder.hpp  PredicateHelper.hpp  Symbol.hpp  Variable.hpp
vision/src/main/cpp/common/notification/: CaptureNotification.hpp  FrameCompletionNotification.hpp  ImageProcessorNotification.hpp  LearningNotification.hpp  MemoryObjectNotification.hpp  MemoryObjectsNotification.hpp  MotionNotification.hpp  Notification.hpp  PlaneNotification.hpp  SaliencyNotification.hpp  SceneChangeNotification.hpp  SiftNotification.hpp  VisionNotification.hpp
vision/src/main/cpp/common/swig/: CMakeLists.txt  Common.i  CommonJNI.hpp
vision/src/main/cpp/detector/: ArucoDetector.cpp  ArucoDetector.hpp  BarCodeDetector.cpp  BarCodeDetector.hpp  BlobDetector.cpp  BlobDetector.hpp  ButtonDetector.cpp  ButtonDetector.hpp  CMakeLists.txt  ClusterDetector.cpp  ClusterDetector.hpp  ClusterDetector2D.cpp  ClusterDetector2D.hpp  ClusterDetectorAdvanced.cpp  ClusterDetectorAdvanced.hpp  ColorBasedDetector.cpp  ColorBasedDetector.hpp  ElevatorDoorDetector.cpp  ElevatorDoorDetector.hpp  FaceDetector.cpp  FaceDetector.hpp  FoodDetectorByHSV.cpp  FoodDetectorByHSV.hpp  GraspDetector.cpp  GraspDetector.hpp  HoughDetector.cpp  HoughDetector.hpp  MotionDetector.cpp  MotionDetector.hpp  NasaButtonDetector.cpp  NasaButtonDetector.hpp  NeuralDetector.cpp  NeuralDetector.hpp  OCRDetector.cpp  OCRDetector.hpp  ObjectDetector.cpp  ObjectDetector.hpp  OpPoseDetector.cpp  OpPoseDetector.hpp  PeopleDetector.cpp  (+13 more)
vision/src/main/cpp/detector/colorbased/: ColorRange.hpp
vision/src/main/cpp/detector/fastblobdetect/: FastBlobDetector.cpp  FastBlobDetector.hpp  FastBlobHelpers.cpp  FastBlobHelpers.hpp
vision/src/main/cpp/detector/grasp/: AgileGrasp.cpp  AgileGrasp.hpp  GraspPose.cpp  GraspPose.hpp  SmallObjectGrasp.cpp  SmallObjectGrasp.hpp
vision/src/main/cpp/detector/hough/: GHT.cpp  GHT.hpp
vision/src/main/cpp/detector/pcd_feature_match/: feature_cloud.hpp  template_alignment.hpp  vfh_classifier.hpp
vision/src/main/cpp/detector/people/: CMakeLists.txt  people_app.cpp
vision/src/main/cpp/detector/swig/: BlobDetector.i  CMakeLists.txt  ObjectDetector.i  SpatialRelationDetector.i
vision/src/main/cpp/display/: CMakeLists.txt  Display.cpp  Display.hpp
vision/src/main/cpp/display/swig/: CMakeLists.txt  Display.i
vision/src/main/cpp/display/util/: DisplayUtilities.hpp
vision/src/main/cpp/grasp/: AgileGrasp.cpp  AgileGrasp.hpp  CMakeLists.txt  Grasp.hpp  GraspDetector.cpp  GraspDetector.hpp  GraspInterface.cpp  GraspInterface.hpp  SmallObjectGrasp.cpp  SmallObjectGrasp.hpp
vision/src/main/cpp/grasp/swig/: CMakeLists.txt  (+3 more)
vision/src/main/cpp/imgproc/: CMakeLists.txt  ChangeDetector.cpp  ChangeDetector.hpp  ImageProcessor.cpp  ImageProcessor.hpp  OpticalFlowProcessor.cpp  OpticalFlowProcessor.hpp  PlaneProcessor.cpp  PlaneProcessor.hpp  SiftProcessor.cpp  SiftProcessor.hpp
vision/src/main/cpp/learn/: CMakeLists.txt  Learner.cpp  Learner.hpp  SegmentedObjectLearner.cpp  SegmentedObjectLearner.hpp
vision/src/main/cpp/point_clouds/: CMakeLists.txt  ExtractedPlane.cpp  ExtractedPlane.hpp  PCLFunctions.hpp  PointCloudUtilities.cpp  PointCloudUtilities.hpp  sorted_extract_clusters.hpp
vision/src/main/cpp/shape_match/: CMakeLists.txt  CMakeLists_old.txt  anglecontext.cpp  evalshapematch.cpp  shapecontext.cpp  shapecontext.h  testshapematch.cpp
vision/src/main/cpp/stm/: ArrayListInterface.cpp  ArrayListInterface.hpp  CMakeLists.txt  ConfidenceLevel.cpp  ConfidenceLevel.hpp  Grasp.hpp  GraspInterface.cpp  GraspInterface.hpp  GraspValidationResult.cpp  GraspValidationResult.hpp  MemoryObject.cpp  MemoryObject.hpp  MemoryObjectInterface.cpp  MemoryObjectInterface.hpp  MemoryObjectMask.cpp  MemoryObjectMask.hpp  RelationValidationResult.cpp  RelationValidationResult.hpp  TrackedObjects.cpp  TrackedObjects.hpp  ValidationResult.cpp  ValidationResult.hpp  ValidationResults.cpp  ValidationResults.hpp
vision/src/main/cpp/tools/: semaphore.hpp  syncedqueue.hpp
vision/src/main/cpp/tracker/: CMTTracker.cpp  CMTTracker.hpp  CMakeLists.txt  GenericTracker.cpp  GenericTracker.hpp  KCFTracker.cpp  KCFTracker.hpp  ObjectTracker.cpp  ObjectTracker.hpp  OpenCVTracker.cpp  OpenCVTracker.hpp  RelationTracker.cpp  RelationTracker.hpp  TLDTracker.cpp  TLDTracker.hpp  V4RTracker.cpp  V4RTracker.hpp
vision/src/main/cpp/visionproc/: CMakeLists.txt  VisionProcess.cpp  VisionProcess.hpp
(+1564 files in other folders)
