PROJECT(common)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(SOURCES
	VisionConstants.cpp
)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LOG4CXX_LIBRARIES})

ADD_SUBDIRECTORY(fol)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} fol_swig)

# build java wrappers via swig
ADD_SUBDIRECTORY(swig)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} common_swig)