PROJECT(grasp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(SOURCES
    GraspInterface.cpp
    GraspDetector.cpp
	SmallObjectGrasp.cpp
	)

if (AGILEGRASP_FOUND)
	SET(SOURCES ${SOURCES}
		AgileGrasp.cpp
	)
endif(AGILEGRASP_FOUND)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})

# link libraries
TARGET_LINK_LIBRARIES(${PROJECT_NAME} common stm)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PCL_LIBRARIES} ${OpenCV_LIBS} ${LOG4CXX_LIBRARIES} ${JSONCPP_LIBRARY})
if (AGILEGRASP_FOUND)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${AGILEGRASP_LIBRARIES})
endif (AGILEGRASP_FOUND)

# build java wrappers via swig
ADD_SUBDIRECTORY(swig)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} grasp_swig)
