PROJECT(point_clouds)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(SOURCES 
  PointCloudUtilities.cpp
  ExtractedPlane.cpp
  #primitives/DataStacks.cpp
)
ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LOG4CXX_LIBRARIES})
if (V4R_V0_FOUND) 
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} v4rEPUtils)
endif(V4R_V0_FOUND)
