PROJECT(fol)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(SOURCES
	# Symbol.cpp
	# Variable.cpp
	# Predicate.cpp
)

#ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})

# build java wrappers via swig
ADD_SUBDIRECTORY(swig)
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} fol_swig)
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LOG4CXX_LIBRARIES})