PROJECT(fol_swig)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# set package and outdir
LIST(APPEND options -package ${VISION_BASE_PACKAGE}.common.fol.swig)
SET_SOURCE_FILES_PROPERTIES(fol.i PROPERTIES SWIG_FLAGS "${options}")
SET(CMAKE_SWIG_OUTDIR ${SWIG_SRC_OUTDIR}/common/fol/swig)

SET_SOURCE_FILES_PROPERTIES(fol.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_LIBRARY(${PROJECT_NAME} TYPE SHARED LANGUAGE java SOURCES fol.i)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LOG4CXX_LIBRARIES})